--- a/style.css
+++ b/style.css
@@ -1,14 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Open+Sans&family=Orbitron:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Open+Sans&family=Orbitron:wght@500&display=swap");
 
 :root {
-    --cyan: hsl(179, 62%, 43%);
-    --bright-yellow: hsl(71, 73%, 54%);
-    --light-gray: hsl(204, 43%, 93%);
-    --grayish-blue: hsl(218, 22%, 67%);
+  --cyan: hsl(179, 62%, 43%);
+  --light-cyan: hsl(179, 54%, 51%);
+  --bright-yellow: hsl(71, 73%, 54%);
+  --light-gray: hsl(204, 43%, 93%);
+  --grayish-blue: hsl(218, 22%, 67%);
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Karla", sans-serif;
+}
+
+main {
+  min-height: 100vh;
+  background-color: var(--light-gray);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lk-price {
+  width: 60%;
+  max-width: 600px;
+  border-radius: 1rem;
+  overflow: hidden;
+  display: grid;
+  grid-template: 1fr 1fr / 1fr 1fr;
+}
+
+.lk-price > div {
+  padding: 2.5rem;
+}
+
+.lk-price .header {
+  background-color: #fff;
+  grid-column: 1 / 3;
+}
+.lk-price .left {
+  background-color: var(--cyan);
+}
+.lk-price .right {
+  background-color: var(--light-cyan);
 }
