--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Open+Sans&family=Orbitron:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap");
 
 :root {
   --cyan: hsl(179, 62%, 43%);
@@ -31,6 +31,7 @@ main {
   overflow: hidden;
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
+  box-shadow: 0 5px 15px rgb(0 0 0 / 0.3);
 }
 
 .lk-price > div {
@@ -41,6 +42,24 @@ main {
   background-color: #fff;
   grid-column: 1 / 3;
 }
+
+.lk-price .header h1 {
+  color: var(--cyan);
+  font-size: 1.75rem;
+  margin-bottom: 1.2rem;
+}
+
+.lk-price .header h2 {
+  color: var(--bright-yellow);
+  font-size: 1.25rem;
+  margin-bottom: .7rem;
+}
+
+.lk-price .header p {
+  color: var(--grayish-blue);
+  line-height: 1.5;
+}
+
 .lk-price .left {
   background-color: var(--cyan);
 }
