--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main {
   display: grid;
   grid-template: 1fr 1fr / 1fr 1fr;
   box-shadow: 0 5px 15px rgb(0 0 0 / 0.3);
+  margin: 4rem auto;
 }
 
 .lk-price > div {
@@ -64,7 +65,6 @@ main {
   background-color: var(--cyan);
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
 }
 
 .lk-price .left h2 {
@@ -97,7 +97,6 @@ main {
 }
 
 .lk-price .left .signup {
-  /* display: block; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,4 +123,34 @@ main {
 .lk-price .right p {
   color: #fff;
   line-height: 1.5;
+}
+
+@media screen and (max-width: 768px) {
+  .lk-price {
+    width: 80%;
+    grid-template: auto / auto;
+  }
+
+  .lk-price > div {
+    padding: 1.5rem;
+  }
+
+  .lk-price .header {
+    grid-column: 1 / 2;
+  }
+
+  .lk-price .header h1 {
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
+  }
+
+  .lk-price .header h2 {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .lk-price .header p {
+    line-height: 1.8;
+  }
+  
 }
